Fixes for responsive layout bugs

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,6 +1,7 @@
 #pie-chart, #line-chart {
   height: 100%;
   margin-bottom: 15px;
+  touch-action: none;
 }
 
 .div-link {
